<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="CV">CV</string>
    <string name="Chat">Tchat</string>
    <string name="Close">Close</string>
    <string name="Data">Donnees</string>
    <string name="Event">Evenement</string>
    <string name="Logout">Deconnexion</string>
    <string name="Mail">Messagerie</string>
    <string name="Network">Reseau</string>
    <string name="Update">Update</string>
    <string name="Wall">Mur</string>
    <string name="Wall_pro">Pro</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_me">About Me</string>
    <string name="action_settings">Settings</string>
    <string name="advisor">advisor</string>
    <string name="agenda">agenda</string>
    <string name="alert">Alert</string>
    <string name="app_name">WorkTools</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="are_image_insert_hint">Insert an image</string>
    <string name="are_link_insert_hint">Insert a link</string>
    <string name="are_link_title">Link</string>
    <string name="article">Article</string>
    <string name="articlepro">Article Pro</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="btn_attach_video">Attach Video</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="crop_image_activity_title" />
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="cv">CV</string>
    <string name="done">Done</string>
    <string name="dummy_content">DUMMY\10CONTENT</string>
    <string name="email">Email</string>
    <string name="error_icon_content_description">Error</string>
    <string name="events">Events</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="file_thumbnail">File Thumbnail</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="inbox">inbox</string>
    <string name="conseiller">conseiller</string>
    <string name="loading_message">Wait while loading...</string>
    <string name="loading_title">Loading</string>
    <string name="mail">mail</string>
    <string name="member">Membre</string>
    <string name="members">Members</string>
    <string name="messageTransfer">Message Transfer</string>
    <string name="messageTransfertext">Please Select the member or members to whom the message will be forwarded.</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_date_format">MMM dd, yyyy</string>
    <string name="mtrl_picker_date_format_without_year">MMM dd</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="mtrl_picker_date_header_title">Select a Date</string>
    <string name="mtrl_picker_date_header_unselected">Selected date</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_invalid_format">Invalid format.\10Use: %1$s</string>
    <string name="mtrl_picker_invalid_range">Invalid range.</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="mtrl_picker_out_of_range">Out of range: %1$s</string>
    <string name="mtrl_picker_range_header_only_end_selected">Start date – %1$s</string>
    <string name="mtrl_picker_range_header_only_start_selected">%1$s – End date</string>
    <string name="mtrl_picker_range_header_selected">%1$s – %2$s</string>
    <string name="mtrl_picker_range_header_title">Select a Date Range</string>
    <string name="mtrl_picker_range_header_unselected">Start date – End date</string>
    <string name="mtrl_picker_save">Save</string>
    <string name="mtrl_picker_text_input_date_format">MM/dd/yyyy</string>
    <string name="mtrl_picker_text_input_date_hint">Date</string>
    <string name="mtrl_picker_text_input_date_range_end_hint">End date</string>
    <string name="mtrl_picker_text_input_date_range_start_hint">Start date</string>
    <string name="mtrl_picker_toggle_to_calendar_input_mode">Switch to calendar input mode</string>
    <string name="mtrl_picker_toggle_to_day_selection">Tap to switch to selecting a day</string>
    <string name="mtrl_picker_toggle_to_text_input_mode">Switch to text input mode</string>
    <string name="mtrl_picker_toggle_to_year_selection">Tap to switch to selecting a year</string>
    <string name="mydata">MyDATA</string>
    <string name="myprofile">Mon Profil</string>
    <string name="network">Network</string>
    <string name="ok">OK</string>
    <string name="open_camera">Open Camera</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="permission_not_given">Permission not given</string>
    <string name="personal_info">Personal Info</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="profile">profile</string>
    <string name="resetSignature">Reset</string>
    <string name="save">Proceed</string>
    <string name="saveSignature">Save</string>
    <string name="save_to_local">Save to local</string>
    <string name="search_menu_title">Search</string>
    <string name="searchcv">searchcv</string>
    <string name="selection_count">%1$d/%2$d</string>
    <string name="somethingwentwrong">Something went wrong</string>
    <string name="stats">stats</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="titleComment">Comments</string>
    <string name="title_activity_are__video_player">ARE Video</string>
    <string name="title_activity_default_image_preview">ARE DefaultImagePreviewActivity</string>
    <string name="tvCommentDelete">Comment Delete</string>
    <string name="tvCommentEdit">Comment Edit</string>
    <string name="tvDeleteMessage">Do you want to delete this post?</string>
    <string name="tvEditComment">EditComment</string>
    <string name="tvNo">No</string>
    <string name="tvNoCommentFound">No Comments Found</string>
    <string name="tvNoDataFound">No Data Found</string>
    <string name="tvSelectOptions">Select Options</string>
    <string name="tvViewComment">View All Comments</string>
    <string name="tvYes">Yes</string>
    <string name="wall">Wall</string>
    <string name="wallpro">Wall Pro</string>
    <string name="tvAgendaDelete">Do you want to delete the evnet ?</string>
    <string name="do_you_want_to_delete_this_mail">Do you want to delete this mail?</string>
    <string name="heyy_there">heyy there</string>
</resources>
